finished and deployed

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Github Jobs Nearby"
     />
+    <meta name="keywords" content="react, github, api, tailwind, inblack67">
     <link rel="apple-touch-icon" href="./icons/git.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>git | Jobs</title>
